# openephys-zmq2osc

./: .gitignore  CLAUDE.md  DEVELOPER.md  LICENSE  OPTIMIZATION_PLAN.md  PHASE1_COMPLETE_STATUS.md  PHASE1_IMPLEMENTATION.md  PHASE1_TESTING_COMPLETE.md  PHASE1_TEST_PLAN.md  README.md  TODO.MD  build.py  config-dev.json  config-template.json  config_high_throughput.json  config_low_latency.json  main.py  pyproject.toml  test_basic.py
.claude/: settings.local.json
sandbox/: mainscript.py  openephysobj.py  uitest.py
src/openephys_zmq2osc/: main.py
src/openephys_zmq2osc/config/: settings.py
src/openephys_zmq2osc/core/events/: event_bus.py
src/openephys_zmq2osc/core/models/: openephys_objects.py
src/openephys_zmq2osc/core/services/: data_manager.py  osc_service.py  zmq_service.py
src/openephys_zmq2osc/core/utils/: __init__.py  signal_processing.py
src/openephys_zmq2osc/interfaces/: base_interface.py  cli_interface.py
