[project]
name = "openephys-zmq2osc"
version = "0.1.0"
description = "A CLI tool for bridging OpenEphys neural data streams via ZMQ to OSC protocol for interactive art applications"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenEphys ZMQ2OSC", email = "dev@example.com"}]
dependencies = [
    "numpy>=2.3.1",
    "python-osc>=1.9.3",
    "pyzmq>=27.0.0",
    "rich>=14.0.0",
]

[project.scripts]
openephys-zmq2osc = "openephys_zmq2osc.main:main"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pyinstaller>=6.14.2",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "S", "T20", "PT", "Q"]
ignore = ["E501", "S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
